deployment/service2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2-container
        image: watri/service2:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 10m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: service2-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: service2
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service2-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Client-Id,Client-Version"
spec:
  tls:
    - hosts:
        - watri.com
      secretName: sehatq-ssl-cert
  rules:
    - host: api.watri.com
      http:
        paths:
          - path: /service2
            pathType: ImplementationSpecific
            backend:
              service:
                name: service2-service
                port:
                  number: 3000
